--- a/joe.html
+++ b/joe.html
@@ -45,6 +45,9 @@
     <a href= "index.html">Back to main page </a>
 </p>
         </div>
+
+    <script src= "http://maps.googleapis.com/maps/api/js">
+    </script>
 </div> <!--Closing page div-->
 </body>
 </html>
